tests/fixtures/cli_check_err.stderr.expected
warning: unused import: `std::fs`
 --> src/main.rs:5:5
  |
5 | use std::fs;
  |     ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `sh2c` (bin "sh2c") generated 1 warning (run `cargo fix --bin "sh2c" -p sh2c` to apply 1 suggestion)
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.01s
     Running `target/debug/sh2c --check tests/fixtures/cli_check_err.sh2`
cli_check_err.sh2:2:13: Unexpected character: ;
    let x = ; // Syntax error
            ^
