tests/fixtures/cli_check_err.sh2
func main() {
    let x = ; // Syntax error
}
